<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="431dp"
        android:background="@drawable/leon"
        android:contentDescription="@string/descripcion_img" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="#673AB7"
        android:text="@string/subtitulo"
        android:textColor="#F4EFEF"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="9dp"
        android:onClick="animal_ca2"
        android:text="@string/boton_siguiente"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="62dp"
        android:onClick="animal_ca1"
        android:text="@string/boton_anterior"
        tools:ignore="VisualLintButtonSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="9dp">


        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/desc_animal1"
            tools:ignore="VisualLintLongText" />

    </ScrollView>

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-52dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="381dp"
        android:text="@string/animal1" />


</RelativeLayout>